@@ -51,8 +51,6 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPGeneralPayerInfoDa
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPSpecificPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHClientConceptDataLoader;
-import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisDataLoader;
-import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisMappingDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDescriptionDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptExtraDataLoader;
@@ -65,6 +63,7 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.MBHEncounterDiagnosisDa
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHEncounterDiagnosticDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHEncounterTypeWindowDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHObservationDataLoader;
+import org.bandahealth.idempiere.graphql.dataloader.impl.MBHOclOriginatingSourceDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHPayerInfoFldDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHPayerInfoFldSugDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHPayerInfoFldValDataLoader;
@@ -821,7 +820,6 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_ReportStatementData
 import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_TransactionDataLoader;
 import org.dataloader.DataLoaderRegistry;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -840,7 +838,7 @@ public class BandaDataLoaderComposer {
 	 * in hot-swapping in development without having to restart iDempiere
 	 */
 	public BandaDataLoaderComposer() {
-		dataLoaders = Arrays.asList(
+		dataLoaders = List.of(
 				new M_ElementDataLoader(),
 				new M_RegistrationDataLoader(),
 				new MAccessLogDataLoader(),
@@ -902,8 +900,6 @@ public class BandaDataLoaderComposer {
 				new MBHBPPayerInfoDataLoader(),
 				new MBHBPSpecificPayerInfoDataLoader(),
 				new MBHClientConceptDataLoader(),
-				new MBHCodedDiagnosisDataLoader(),
-				new MBHCodedDiagnosisMappingDataLoader(),
 				new MBHConceptDataLoader(),
 				new MBHConceptDescriptionDataLoader(),
 				new MBHConceptExtraDataLoader(),
@@ -916,6 +912,7 @@ public class BandaDataLoaderComposer {
 				new MBHEncounterDiagnosticDataLoader(),
 				new MBHEncounterTypeWindowDataLoader(),
 				new MBHObservationDataLoader(),
+				new MBHOclOriginatingSourceDataLoader(),
 				new MBHPayerInfoFldDataLoader(),
 				new MBHPayerInfoFldSugDataLoader(),
 				new MBHPayerInfoFldValDataLoader(),
